tests/rename/should_fail/T19843k.hs
module T19843k where

import Data.Monoid as M

main = M.doesn'tExist
