tests/rename/should_fail/T19843k.stderr
T19843k.hs:5:8: error: [GHC-76037]
    Not in scope: ‘M.doesn'tExist’
    Note: The module ‘Data.Monoid’ does not export ‘doesn'tExist’.

